--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-  "/dist/js/app.js": "/dist/js/app.62ca0e.js",
-  "/dist/css/app.css": "/dist/css/app.a0873e.css"
+    "/dist/js/app.js": "/dist/js/app.js",
+    "/dist/css/app.css": "/dist/css/app.css"
 }
